--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="./img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <img src="img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                 <h3>Mohammad Aalam</h3>
                 <h4>Ceo &amp; Founder</h4>
                 <div class="stars">
@@ -689,7 +689,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="./img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="" height="100" width="100">
+                <img src="img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="" height="100" width="100">
                 <h3>Krishna Chandra</h3>
                 <h4>Designer</h4>
                 <div class="stars">
@@ -705,7 +705,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="./img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                <img src="img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Karunanidhi</h3>
                 <h4>Store Owner</h4>
                 <div class="stars">
@@ -721,7 +721,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="./img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="" height="100" width="100">
+                <img src="img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="" height="100" width="100">
                 <h3>Gabbar Sharma</h3>
                 <h4>Freelancer</h4>
                 <div class="stars">
@@ -737,7 +737,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="./img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="" height="100" width="100">
+                <img src="img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="" height="100" width="100">
                 <h3>Areeba Azad</h3>
                 <h4>Entrepreneur</h4>
                 <div class="stars">
