--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section accent-background">
 
-      <img src=".//img/testimonials-bg.jpg" class="testimonials-bg" alt="">
+      <img src="img/testimonials-bg.jpg" class="testimonials-bg" alt="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
