--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <div class="row justify-content-between gy-4">
               <div class="col-lg-5">
-                <img src="./img/profile.jpg" class="img-fluid" alt="">
+                <img src="./img/MY-IMG.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-7 about-info">
                 <p><strong>Name: </strong> <span>Mohd Aalam</span></p>
